added some functions in the script

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rock paper scissors</title>
+    <script src="rps.js"></script>
   </head>
   <body>
     <div class="scores">
