--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock paper scissors</title>
     <link rel="stylesheet" href="styles.css">
     <script src="rps-with-ui.js" defer></script>
